--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,6 @@
     "type": "git",
     "url": "git+https://github.com/TMisch/madhacks.git"
   },
-  "author": "",
-  "license": "ISC"
+  "author": " Rachel Korkowski, Taylor Misch, Thomas Debroux",
+  "license": "MIT"
 }
