--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 frontend/node_modules
+backend/node_modules
 /.pnp
 .pnp.js
 
@@ -25,3 +26,7 @@ yarn-error.log*
 
 # user ignores
 .vscode
+
+# dotenv environment variables file
+.env
+
