--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.11",
     "morgan": "^1.9.1"
