--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.5",
+    "foundation-sites": "^6.5.0",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.10.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-foundation": "^0.9.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "what-input": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,5 +29,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "css-loader": "^1.0.1",
+    "style-loader": "^0.23.1"
+  }
 }
