--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.5",
+    "axios": "^0.18.0",
     "foundation-sites": "^6.5.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.10.0",
