--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install": "concurrently \"cd backend && npm install\" \"cd frontend && npm install\"",
-    "start": "concurrently \"cd backend && node server.js\" \"cd frontend && npm start\""
+    "start": "concurrently \"cd backend && node server.js\" \"cd frontend && sleep 3s && npm start\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
     "url": "https://github.com/TMisch/madhacks/issues"
   },
   "dependencies": {
-    "concurrently": "^4.0.1"
+    "axios": "^0.18.0",
+    "concurrently": "^4.0.1",
+    "react-router": "^4.3.1"
   }
 }
